add patch method for inserting new images
